# blackjack

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
.github/: test.yml
.github/workflows/: test.yml
core/: Dockerfile
core/api/: pyproject.toml
core/api/api/: api.py  models.py  redis.py  schemas.py
core/api/api/blackjack/: conversions.py  logic.py  utils.py
core/api/api/routers/: game.py
core/api/blackjack_demo/: demo_helpers.py
core/api/demo/: demo.py
core/api/scripts/: get_cpp_module.sh  start_api_dev.sh
core/api/tests/: test_api.py
core/api/tests/blackjack/: test_conversions.py
core/cpp/: CMakeLists.txt
core/cpp/blackjack/: card.cc  card.hpp  game.cc  game.hpp  hand.cc  hand.hpp
core/cpp/demo/: demo.cc  demo_helpers.cc  demo_helpers.hpp
core/cpp/python_bindings/: bindings.cc
core/cpp/scripts/: build_all.sh  build_and_test_all.sh  build_bindings.sh
core/cpp/test/: CMakeLists.txt  cards_utest.cc  game_utest.cc  hand_utest.cc
core/python_bindings/: bindings.cc
frontend/: .env.test  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: axiosConfig.tsx  index.tsx  testUtils.tsx  theme.tsx
frontend/src/components/app/: App.test.tsx  App.tsx
frontend/src/components/cards-list/: CardsList.test.tsx  CardsList.tsx
frontend/src/components/error-text/: ErrorText.test.tsx  ErrorText.tsx
frontend/src/components/game/: Game.hooks.tsx  Game.test.tsx  Game.tsx  game-hooks.tsx
frontend/src/components/logo/: Logo.test.tsx  Logo.tsx
frontend/src/components/text-to-be-shown/: TextToBeShown.test.tsx  TextToBeShown.tsx
frontend/src/constants/: game.ts
frontend/src/pages/game-screen/: GameScreen.test.tsx  GameScreen.tsx
frontend/src/pages/start-screen/: StartScreen.test.tsx  StartScreen.tsx  start-screen-hooks.tsx
frontend/src/store/slices/: gameSlice.ts
